# proyect

./: README.md
Backend/: Dockerfile  api.py  compose.yaml  insects_model_router.py  pyproject.toml  requirements.txt
Ml-Model/: insects-recognition.ipynb  pyproject.toml
frontend/: Dockerfile  Home.py  compose.yaml  controller.py  insects.db  pyproject.toml  requirements.txt
frontend/pages/: 1_📈_Classify_Insect.py  2_🌍_Insects_Maps.py  3_🏫_Insects_Details.py  4_🕵️‍♀️_Community.py
