[tool.poetry]
name = "ml-model"
version = "0.1.0"
description = ""
authors = ["Geyner Rivera"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.11.0"
tensorflow-io-gcs-filesystem = "0.31.0"
split-folders = "^0.5.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
